tests/NormalTests/paczka2/big_fuzzy/27437376.err
Error in line 6: Faj A675 52,3
Error in line 7: Faj S180 94,5
Error in line 5: S58 S58 63,2
Error in line 15: S58 A557 4,3
Error in line 16: S58 S58 53,7
Error in line 19: S58 A557 2,4
Error in line 30: dKW A557 99,1
Error in line 47: nFQ A557 94,5
Error in line 45: Faj S58 70,7
Error in line 57: P8s A557 27,5
Error in line 59: P8s A675 85,2
Error in line 66: cl85 S180 167,2
Error in line 75: nFQ S180 347,3
Error in line 78: nFQ A557 45,5
Error in line 70: dNUu7TrIY A675 49,5
Error in line 89: dNUu7TrIY A557 18,4
Error in line 101: dNUu7TrIY S58 53,8
Error in line 118: dKW S180 87,3
Error in line 123: Faj A675 5,8
Error in line 119: dKW A675 42,9
Error in line 136: Faj S58 215,1
Error in line 130: P8s S180 151,7
Error in line 137: Faj A675 58,8
Error in line 132: S58 S180 54,0
Error in line 150: dKW A557 67,,
Error in line 149: dKW S58 48,0
Error in line 147: S58 S58 96,5
Error in line 161: S58 A675 119,7
Error in line 169: dNUu7TrIY A557 41,9
Error in line 174: dNUu7TrIY A675 56,4
Error in line 175: dNUu7TrIY S58 85,8
Error in line 195: S58 A557 54,85
Error in line 163: S58 S180 85,8
Error in line 200: S58 A675 60,3
Error in line 202: dKW S58 89,4
Error in line 203: dKW S180 88,9
Error in line 183: P8s A675 361,5
Error in line 207: dKW A557 33,0
Error in line 219: P8s S180 -3,4
Error in line 208: P8s S180 644,3
Error in line 226: cl85 S180 5,7
Error in line 211: dKW S180 71,3
Error in line 232: P8s A675 67,4
Error in line 240: dKW A557 35,7
Error in line 249: Faj S58 07,6
